app/styles/_patient-navbar.scss
.patient-user {
  background-color: $cyan-blue-light;
  color: $pickled-bluewood;
  font-weight: bold;
  border: 0;
}

.patient-user--content {
  background-color: $body-bg;
}

.patient-user--nav {
  border-radius: 0;
  display: inline-block;
  margin-bottom: 0;
  margin-top: 2px;
  max-height: 40px;
  min-height: 40px;
  width: 100%;
}

.patient-user__navbar {
  padding-left: 0;
  min-height: 40px;
  width: 100%;
}

.patient-user__navbar ul > li {
  padding-right: 100px;
  outline: none;
}

.patient-user__navbar ul > li > a {
  padding: 10px 0px 9px 0px;
  color: $body-bg;
  cursor: pointer;
  position: relative;
  &:hover {
    background-color: inherit;
    color: inherit;
    box-shadow : 0 -3px 0 0 $sunshade inset;
    border-radius: 0;
    span{
      color: white;
    }
  }
  .nav_drop_arrow{
    position: relative;
    top: 0px;
    left: 4px;
    font-size: 10px;
  }
  .icons{
    top: 12px;
    left: 2px;
    position: absolute;

  }
}

.patient-user__navbar ul > li > a.active {
  background-color: $cyan-blue-light;
  color: white;
  outline: 0;
  box-shadow : 0 -3px 0 0 $sunshade inset;
  border-radius: 0;
  padding-bottom: 9px;
}
.patient-user__navbar ul > li > a.nav_bar_title:hover{
  box-shadow: none;
  cursor: default;
}
.patient-user__navbar .patient-dashboard > li {
  padding-right: 50px;
}

.patient-user__navbar .right > li {
  padding-right: 0;
  padding-left: 10px;
}
.patient-user__navbar{
  .dropdown-menu{
    padding: 10px 0px;
    li{
      padding: 0px;
      
      a{
        color: $gray;
        padding: 10px 10px;
        &:hover{
          border-bottom: 0;
          box-shadow: none;
          background-color: $brand-primary;
          color: $component-active-color;
        }
      }

    }
  }
  .hcp_hsp_name_a.open{
    a{
      background-color: transparent;
    }
  }
}
.patient_nav_link_right{
  li{
    display: inline-block;
    margin-right: 20px;
    &:last-child{
      margin-right: 0px;
    }
    a{
      padding: 10px 0px 9px 30px !important;
    }
  }

}
.hcp_hsp_name_a.dropdown {
  .icon-arrow-down {
    padding-left: 5px;
  }
}

